idp/konflux/ui/core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: konflux-ui
  namespace: konflux-ui
spec:
  ingressClassName: nginx
  rules:
    - host: konflux.cnoe.localtest.me
      http:
        paths:
          - backend:
              service:
                name: proxy
                port:
                  name: web-tls
            path: /
            pathType: Prefix
